@@ -1,6 +1,7 @@
 2012-03-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* Not tagged.
 	* Improvements in Jython parser.
+	* Problems report dialog after parsing a configuration.
 
 2012-03-26 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-06-33
